ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 3.5.8
    • Affects Version/s: 3.5.5
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Hide

      Examination of db/s/collection_range_deleter.cpp: it logs the failure, but does not notify listeners.

      Show
      Examination of db/s/collection_range_deleter.cpp: it logs the failure, but does not notify listeners.
    • Sharding 2017-05-29
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Esha has noticed that a failure when waiting for write majority on deleting a range is not passed on to listeners for the results of the operation.

            Assignee:
            Nathan Myers (Inactive)
            Reporter:
            Nathan Myers (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: