SERVER-29348 Handle range deletion write-concern failure